Playground4_FriendsWithBoats/force-app/main/default/objects/Boat__c/Boat__c.object-meta.xml
<CustomObject>
    <label>Boat</label>
    <nameField>
        <label>Boat Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Boats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>